Changed overflow to overflow-x and to hidden to prevent the horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ img {
 {
 	width: 101%;
 	height: 99%;
-	overflow: auto;
+	overflow-x: hidden;
 	
 }
 /* Header Styles */
